--- a/dotnetnotts-api/dotnetnotts-api.csproj
+++ b/dotnetnotts-api/dotnetnotts-api.csproj
@@ -1,7 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
+    <UserSecretsId>c95e0a50-d696-4b36-bb56-481f6f6b4d0c</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
@@ -11,6 +12,13 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
+    <PackageReference Include="Meetup.NetStandard" Version="0.4.1" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="Meetup.Api">
+      <HintPath>..\..\MeetupApi\src\Meetup.Api\bin\Release\netstandard2.0\Meetup.Api.dll</HintPath>
+    </Reference>
+  </ItemGroup>
 </Project>
