--- a/dotnetnotts-api/dotnetnotts-api.csproj
+++ b/dotnetnotts-api/dotnetnotts-api.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
     <PackageReference Include="Meetup.NetStandard" Version="0.4.1" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
+    <PackageReference Include="AspNetCore.KeyVault" Version="1.0.6" />
   </ItemGroup>
 
   <ItemGroup>
